--- a/cal_pesangon.html
+++ b/cal_pesangon.html
@@ -84,7 +84,7 @@
 <div class="container">
     <h1>Hitung Pesangon dan Hari Cuti</h1>
 
-    <label for="start-date">Mulai Kerja</label>
+    <label for="start-date">Mulai Masuk Kerja</label>
     <input type="date" id="start-date">
 
     <label for="end-date">Akhir Kerja</label>
