--- a/cal_pesangon.html
+++ b/cal_pesangon.html
@@ -23,6 +23,11 @@
         h1 {
             text-align: center;
             color: #6a0dad;
+            margin-bottom: 10px;
+        }
+        h3 {
+            text-align: center;
+            color: #6a0dad;
             margin-bottom: 30px;
         }
         label {
