--- a/catatan.html
+++ b/catatan.html
@@ -86,11 +86,13 @@
             margin-top: 20px;
             background-color: #4caf50;
             cursor: pointer;
+            color: white;
         }
         .clear-button {
             margin-top: 20px;
             background-color: #f44336;
             cursor: pointer;
+            color: white;
         }
         .record-list {
             margin-top: 30px;
@@ -139,7 +141,7 @@
     <button class="export-button" onclick="exportRecords()">Export Semua Catatan</button>
     <button class="clear-button" onclick="confirmClearRecords()">Hapus Semua Catatan</button>
     
-    <p class="reminder">Jika jam di mesin absensi pabrik sesuai dengan kenyataan, sesuaikan waktu Anda dengan jam yang tertera di mesin absensi (tepat hingga menit). Jika jam di mesin absensi pabrik tidak sesuai dengan kenyataan, masukkan waktu masuk dan pulang kerja Anda yang sebenarnya. Semua catatan absensi sangat penting karena jika terjadi perselisihan, majikan mungkin tidak bersedia memberikan catatan absensi Anda.</p>
+    <p class="reminder">Catat waktu masuk dan pulang kerja Anda setiap hari. Jika jam di mesin absensi sesuai, catat sesuai waktu yang tertera (tepat hingga menit). Jika tidak sesuai, catat waktu yang sebenarnya. Setiap catatan penting untuk melindungi hak Anda jika terjadi perselisihan. Jangan lupa, catatan ini bisa menjadi bukti penting di masa depan.</p>
 
     <div class="record-list">
         <h2>10 Catatan Terakhir</h2>
